2007-06-01  Jb Evain  <jbevain@novell.com>

	* AUTHORS, MIT.X11, man/mink.1: added

2007-05-31  Jb Evain  <jbevain@novell.com>

	* README: added
	  monolinker.exe.sources: moved to mink.exe.sources
	  Makefile, Mono.Linker.csproj: emit a mink.exe

	* Mono.Linker/LinkContext.cs:
		A resolved assembly is not always the one requested,
		cache the good name.

	* Tests/Mono.Linker.Tests/AbstractLinkingTestFixture.cs
	  Mono.Linker.Steps/OutputStep.cs
	  Mono.Linker.Steps/LoadReferencesStep.cs
	  Mono.Linker.Steps/CleanStep.cs
	  Mono.Linker.Steps/ResolveFromAssemblyStep.cs
	  Mono.Linker.Steps/SweepStep.cs
	  Mono.Linker.Steps/BlacklistStep.cs
	  Mono.Linker.Steps/MarkStep.cs
	  Mono.Linker.Steps/BaseStep.cs
	  Mono.Linker.csproj
	  Mono.Linker/Driver.cs:
		Add a new abstract BaseStep to be extends by most
		of the steps.
		Add a new LoadReferences step to force all referenced
		assemblies to be resolved before the mark step.

	* Mono.Linker/CustomResolver.cs
	  Mono.Linker/LinkContext.cs:
		Register entry assembly.

2007-05-30  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/MarkStep.cs:
		Fix regression: do not mark GenericParameters that are
		part of a typespec, like T[] or T*.

2007-05-28  Jb Evain  <jbevain@novell.com>

	* Big refactoring. Get rid of the markers, use the annotations
		of Cecil instead.

	* Mono.Linker/Marker.cs
	  Mono.Linker/MarkStep.cs
	  Mono.Linker/SweepStep.cs:
		Use annotations to mark wether or not we should
		sweep an item.

2007-05-23  Jb Evain  <jbevain@novell.com>

	* Mono.Limker/CleanStep.cs:
		Stop doing hackish stupid things because
		Cecil suddenly handles MemberRef much better.

2007-05-19  Jb Evain  <jb@nurv.fr>

	* Mono.Linker/ResolveFromXmlStep.cs
	  Mono.Linker/AssemblyMarker.cs
	  Mono.Linker/MarkStep.cs
	  Mono.Linker/ResolveFromAssemblyStep.cs:
		Process correctly the marker selected in the resolve phases.

2007-05-17  Jb Evain  <jb@nurv.fr>

	* Mono.Linker/CleanStep.cs
	  Mono.Linker/SweepStep.cs
	  Mono.Linker/MarkStep.cs: