@@ -1,0 +1,4 @@
+prefix=/home/jbevain/devel/mono
+RUNTIME=mono
+ASSEMBLY_VERSION=0.1.0.0
+VERSION=0.1
