@@ -1,0 +1,2 @@
+#!/bin/sh
+mono $MONO_EXTRA_ARGS @prefix@/lib/mink/mink.exe "$@"
